--- a/src/imports/ui/css/index.css
+++ b/src/imports/ui/css/index.css
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+/*import all scss file*/
+
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import 'variables.scss';
+@import 'home-page.scss';
